# Randforest

./: .gitignore  README.md  main.py  prediction_api.py  pyproject.toml  requirements.txt
callbacks/: __init__.py  ml_classifier.py
callbacks/dependencies/: logistic_model_preprocessing.py
controllers/: __init__.py
hercule/: __init__.py  connection_engine.py  data_fetching.py  data_preprocessing.py  encoders.py  normalizers.py
ml-classifier/: ml_classifier.py
ml-classifier/dependencies/: logistic_model_preprocessing.py
mlClassifier/dependencies/: logistic_model_preprocessing.py  logistic_regression_classification.py  model_building.py
mlClassifier/middleware/: features_request.py
randforest/: connection_engine.py  data_fetching.py  encoders.py  normalizers.py
randforest/factories/: imputers.py
randforest/imputers/: __init__.py  average_imputer.py  knn_imputer.py  mice_imputer.py
randforest/models/: __init__.py  linear_model.py
tests/: __init__.py  conftest.py
tests/test_logistic_model/: test_data_split.py
tests/test_request_api/: test_post_request.py
tests/unit/: test_data_fetching.py  test_data_preprocessing.py  test_database_connection.py  test_linear_models.py
utils/: api_helpers.py  data_preprocessing.py  model_report.py  statistics_summary.py
