[tool.poetry]
name = "malwareclassifier"
version = "0.1.0"
description = "Library to perform random forest classifiers, hassle free."
authors = ["David Santacruz R. <axelsantacruzr@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
SQLAlchemy = "1.4.37"
pytest = "7.1.2"
psycopg2-binary = "2.9.3"
pytest-mock = "3.8.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
